Fix text; fix gaps (#299)

--- a/modules/ui/src/app/components/version/consent-dialog/consent-dialog.component.scss
+++ b/modules/ui/src/app/components/version/consent-dialog/consent-dialog.component.scss
@@ -34,6 +34,8 @@
 
 .content-container {
   overflow: scroll;
+  display: grid;
+  gap: 16px;
 }
 
 .testrun-logo {
